# animation-practice

./: CMakeLists.txt  README.md  install.sh
include/: animation.h  dialogue.h  globals.h  map.h  player.h
resources/: chicken_1.json  example_dialogue.json  grass.json
resources/map/: map.ldtk
resources/map/map/simplified/Level_0/: TileData.csv  data.json
src/: animation.cpp  dialogue.cpp  main.cpp  map.cpp  player.cpp
